# helpdesk-planner

./: .gitignore  Ergebnis.xlsx  Liste.xlsm  Liste.xlsx  README.md  Template.xlsx  Wochenplanersteller.xlsm  create_venv.ps1  font_size.csv  go_venv.ps1  pyproject.toml  requirements.txt  timetable.csv
dash_app/: __main__.py  app.py  callbacks.py
dash_app/assets/: style.css
dash_app/pages/: home.py
src/: font_size.py  go.py
